tests/misc/errors/typescript/issue-8773.ts
// prettier-ignore
foo +      foo;

continue // comment
;
